# high_spectral_patch_embed

./: README.md  pyproject.toml
experiment/: fmow.yaml  resnet.yaml  run.yaml  trainer.yaml
experiment/classification/: resnet.yaml  swin_base.yaml  swin_meta_base.yaml  vit_3dpatch_base.yaml  vit_base.yaml  vit_group_base.yaml  vit_meta_base.yaml
experiment/finetuning/: vit_base_fmow.yaml  vit_base_mae_fmow.yaml  vit_group_base_fmow.yaml  vit_meta_base_fmow.yaml  vit_meta_base_mae_fmow.yaml  vit_meta_base_mim_fmow.yaml
experiment/fmow_ablation/: add.yaml  transform_add.yaml  vit_meta_base.yaml
experiment/fmow_finetuning/: vit_base.yaml  vit_group_base.yaml  vit_meta_base.yaml  vit_patch3d_base.yaml  vit_usat_base.yaml
experiment/fmow_scratch/: swin_base.yaml  swin_meta_base.yaml  vit_base.yaml  vit_group_base.yaml  vit_meta_base.yaml  vit_patch3d_base.yaml  vit_usat_base.yaml
experiment/pretrain/: vit_base.yaml  vit_base_mae.yaml  vit_group_base.yaml  vit_meta_base.yaml  vit_meta_base_mae.yaml  vit_meta_base_mim.yaml  vit_patch3d.yaml  vit_usat_base.yaml
experiment/seg_finetuning/: vit_base.yaml  vit_group_base.yaml  vit_meta_base.yaml  vit_patch3d_base.yaml
experiment/seg_scratch/: vit_base.yaml  vit_group_base.yaml  vit_meta_base.yaml  vit_patch3d_base.yaml  vit_usat_base.yaml
experiment/share/: fmow.yaml  fmow_10bands.yaml  fmow_12bands.yaml  pretrain.yaml  satmim.yaml  seg_munich.yaml  seg_munich_10band.yaml  seg_munich_12band.yaml  trainer.yaml  trainer1.yaml  trainer2.yaml
src/: test.py
src/meta_embedding/: trainer.py
src/meta_embedding/ckpt/: ckpt.py
src/meta_embedding/datamodules/: __init__.py  transforms.py
src/meta_embedding/lightning_datamodule/: transforms.py
src/meta_embedding/lightning_module/: __init__.py  base.py  base_module.py  classification_module.py  finetuning.py  lr_scheduler.py  metrics.py  (+3 more)
(+79 files in other folders)
