[project]
name = "meta_embedding"
version = "1.0"
description = "Different patch embedding modules for high spectral remote sensing data."
requires-python = ">=3.10"
dependencies = [
    "torch == 2.0",
    "pytorch-lightning == 2.0",
    "torchvision ~= 0.15",
    "wandb ~= 0.14",
    "einops == 0.7",
    "pandas ~= 2.2",
    "rasterio ~= 1.3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]